# userspace-runtime-patching-cpp

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
doc/: update_mermaid_diagrams.js  update_mermaid_diagrams.sh
doc/diagrams/: arch.mermaid
lib/: CMakeLists.txt
lib/cmake/: AddGoogleTest.cmake
lib/src/: lde_minimal.cpp  lde_minimal.h  make_jmp.cpp  make_jmp.h  runtime_patching_lib.cpp
lib/src/include/: runtime_patching_lib.h
lib/tests/: vtable_patch.cpp
registry/: meta.json  p1.cpp
src/: demo_functions.h  main.cpp  read_from_input.h
